--- a/data/GUF-cat.msword.html
+++ b/data/GUF-cat.msword.html
@@ -14,8 +14,8 @@
    </head>
    <body>
       <p>Conceptual model/Grondwatergebruik (GUF) conceptueel/20210201</p>
-      <p>Imvertor: 1.64.1</p>
-      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.9-1-20210201-20210521-113653</p>
+      <p>Imvertor: 1.64.2</p>
+      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.9-1-20210201-20210525-153202</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -421,13 +421,14 @@
                                  
                                  <p>De wetgever stipuleert dat het gegeven moet zijn vastgelegd om inzicht te geven in
                                     de relatie met de taken van een bestuursorgaan. Het gegeven geeft inzicht in de maatschappelijke
-                                    betekenis van de informatie. Het betreft hier de rechtsgrond ten tijde van het in
-                                    de werkelijkheid ontstaan van het grondwatergebruiksysteem.</p>
+                                    betekenis van de informatie. Het betreft hier de rechtsgrond in het heden. Wanneer
+                                    tijdens de levensduur van het registratieobject de rechtsgrond veranderd, dan wordt
+                                    deze verandering inclusief het moment waarop de verandering plaats vond geregistreerd.</p>
                                  </td>
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d57407e1824"></a><section id="detail_d57407e1824">
+                     </section><a class="anchor" id="detail_d57419e1830"></a><section id="detail_d57419e1830">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -478,7 +479,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57407e2040"></a><section id="detail_d57407e2040">
+                  </section><a class="anchor" id="detail_d57419e2046"></a><section id="detail_d57419e2046">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -523,7 +524,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57407e2249"></a><section id="detail_d57407e2249">
+                  </section><a class="anchor" id="detail_d57419e2255"></a><section id="detail_d57419e2255">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -569,7 +570,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57407e2457"></a><section id="detail_d57407e2457">
+                  </section><a class="anchor" id="detail_d57419e2463"></a><section id="detail_d57419e2463">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -835,7 +836,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d57407e3244"></a><section id="detail_d57407e3244">
+                     </section><a class="anchor" id="detail_d57419e3253"></a><section id="detail_d57419e3253">
                      <h4>  gebruiksdoel systeem</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -872,7 +873,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57407e3411"></a><section id="detail_d57407e3411">
+                  </section><a class="anchor" id="detail_d57419e3420"></a><section id="detail_d57419e3420">
                      <h4>  maximale waterverplaatsing</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -938,7 +939,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57407e3696"></a><section id="detail_d57407e3696">
+                  </section><a class="anchor" id="detail_d57419e3705"></a><section id="detail_d57419e3705">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1212,7 +1213,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d57407e4949"></a><section id="detail_d57407e4949">
+                     </section><a class="anchor" id="detail_d57419e4967"></a><section id="detail_d57419e4967">
                      <h4>  maximale waterverplaatsing</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1276,7 +1277,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57407e5185"></a><section id="detail_d57407e5185">
+                  </section><a class="anchor" id="detail_d57419e5203"></a><section id="detail_d57419e5203">
                      <h4>  energiekenmerken</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1344,7 +1345,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57407e5513"></a><section id="detail_d57407e5513">
+                  </section><a class="anchor" id="detail_d57419e5531"></a><section id="detail_d57419e5531">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1381,7 +1382,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57407e5680"></a><section id="detail_d57407e5680">
+                  </section><a class="anchor" id="detail_d57419e5698"></a><section id="detail_d57419e5698">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1805,7 +1806,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d57407e6538"></a><section id="detail_d57407e6538">
+                     </section><a class="anchor" id="detail_d57419e6556"></a><section id="detail_d57419e6556">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1842,7 +1843,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57407e6705"></a><section id="detail_d57407e6705">
+                  </section><a class="anchor" id="detail_d57419e6723"></a><section id="detail_d57419e6723">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2071,7 +2072,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d57407e7585"></a><section id="detail_d57407e7585">
+                     </section><a class="anchor" id="detail_d57419e7603"></a><section id="detail_d57419e7603">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2109,7 +2110,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57407e7752"></a><section id="detail_d57407e7752">
+                  </section><a class="anchor" id="detail_d57419e7770"></a><section id="detail_d57419e7770">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2672,7 +2673,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d57407e9675"></a><section id="detail_d57407e9675">
+                     </section><a class="anchor" id="detail_d57419e9693"></a><section id="detail_d57419e9693">
                      <h4>  filtertraject</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2731,7 +2732,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57407e9966"></a><section id="detail_d57407e9966">
+                  </section><a class="anchor" id="detail_d57419e9984"></a><section id="detail_d57419e9984">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2768,7 +2769,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57407e10133"></a><section id="detail_d57407e10133">
+                  </section><a class="anchor" id="detail_d57419e10151"></a><section id="detail_d57419e10151">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2983,7 +2984,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d57407e11399"></a><section id="detail_d57407e11399">
+                     </section><a class="anchor" id="detail_d57419e11426"></a><section id="detail_d57419e11426">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -3021,7 +3022,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57407e11566"></a><section id="detail_d57407e11566">
+                  </section><a class="anchor" id="detail_d57419e11593"></a><section id="detail_d57419e11593">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -3575,7 +3576,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d57407e12931"></a><section id="detail_d57407e12931">
+                     </section><a class="anchor" id="detail_d57419e12960"></a><section id="detail_d57419e12960">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -3613,7 +3614,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57407e13098"></a><section id="detail_d57407e13098">
+                  </section><a class="anchor" id="detail_d57419e13127"></a><section id="detail_d57419e13127">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -3896,7 +3897,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d57407e13996"></a><section id="detail_d57407e13996">
+                     </section><a class="anchor" id="detail_d57419e14025"></a><section id="detail_d57419e14025">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -3934,7 +3935,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57407e14163"></a><section id="detail_d57407e14163">
+                  </section><a class="anchor" id="detail_d57419e14192"></a><section id="detail_d57419e14192">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4414,7 +4415,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d57407e16105"></a><section id="detail_d57407e16105">
+                     </section><a class="anchor" id="detail_d57419e16139"></a><section id="detail_d57419e16139">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4451,7 +4452,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57407e16272"></a><section id="detail_d57407e16272">
+                  </section><a class="anchor" id="detail_d57419e16306"></a><section id="detail_d57419e16306">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4957,7 +4958,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d57407e17646"></a><section id="detail_d57407e17646">
+                     </section><a class="anchor" id="detail_d57419e17680"></a><section id="detail_d57419e17680">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4994,7 +4995,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d57407e17813"></a><section id="detail_d57407e17813">
+                  </section><a class="anchor" id="detail_d57419e17847"></a><section id="detail_d57419e17847">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
