--- a/data/GUF-cat.respec.html
+++ b/data/GUF-cat.respec.html
@@ -45,7 +45,7 @@
       </div>
    </section>
    <section id="">
-      <h2>Entiteiten en attributen   </h2><a class="anchor" id="graph_EAID_048DC684_486B_4605_B9CA_40413DB3C9DC"></a><a class="anchor" id="global_class_Model_Grondwatergebruiksysteem"></a><section id="global_class_Model_Grondwatergebruiksysteem">
+      <h2>Entiteittypen en attributen   </h2><a class="anchor" id="graph_EAID_048DC684_486B_4605_B9CA_40413DB3C9DC"></a><a class="anchor" id="global_class_Model_Grondwatergebruiksysteem"></a><section id="global_class_Model_Grondwatergebruiksysteem">
          <h3>   Grondwatergebruiksysteem</h3>
          <div class="imageinfo "><img src="data/Images/EAID_B304CC3D_29FA_4f54_BC8B_CC4C16783453.png" usemap="#imagemap-EAID_B304CC3D_29FA_4f54_BC8B_CC4C16783453" alt="Diagram "><map name="imagemap-EAID_B304CC3D_29FA_4f54_BC8B_CC4C16783453"><area shape="rect" alt="Gestandaardiseerde locatie" coords="547,36,816,125" href="#graph_EAID_D25A1131_CBF0_4c51_BBB9_22D7C064D83A"><area shape="rect" alt="TijdvakLevensduur" coords="547,476,729,571" href="#graph_EAID_7C14BEF4_6FA0_4e19_9FB4_DFDD995B1187"><area shape="rect" alt="TijdvakGeldigheid" coords="547,372,736,462" href="#graph_EAID_CD1A77A6_6028_4ca0_B78A_46792498A185"><area shape="rect" alt="Registratieobject" coords="189,35,301,86" href="#graph_EAID_2AC7632D_D0CE_4468_8510_855B506BE12A"><area shape="rect" alt="Gerealiseerde installatie" coords="271,479,473,535" href="#graph_EAID_45C4EF5D_AC27_47cc_926D_7F514776B53D"><area shape="rect" alt="Recht grondwatergebruik" coords="25,479,227,535" href="#graph_EAID_1A591F8A_2ECC_4122_86C9_26BFA5C5420E"><area shape="rect" alt="Grondwatergebruiksysteem" coords="102,151,402,412" href="#graph_EAID_048DC684_486B_4605_B9CA_40413DB3C9DC"><area shape="rect" alt="Registratiegeschiedenis" coords="547,139,823,358" href="#graph_EAID_C00FA7D7_7F78_413d_80CC_8F5D41996171"></map><p><b></b></p>
          </div>
@@ -397,13 +397,14 @@
                         
                         <p>De wetgever stipuleert dat het gegeven moet zijn vastgelegd om inzicht te geven in
                            de relatie met de taken van een bestuursorgaan. Het gegeven geeft inzicht in de maatschappelijke
-                           betekenis van de informatie. Het betreft hier de rechtsgrond ten tijde van het in
-                           de werkelijkheid ontstaan van het grondwatergebruiksysteem.</p>
+                           betekenis van de informatie. Het betreft hier de rechtsgrond in het heden. Wanneer
+                           tijdens de levensduur van het registratieobject de rechtsgrond veranderd, dan wordt
+                           deze verandering inclusief het moment waarop de verandering plaats vond geregistreerd.</p>
                         </td>
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d57407e1824"></a><section id="detail_d57407e1824">
+            </section><a class="anchor" id="detail_d57419e1830"></a><section id="detail_d57419e1830">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -454,7 +455,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57407e2040"></a><section id="detail_d57407e2040">
+         </section><a class="anchor" id="detail_d57419e2046"></a><section id="detail_d57419e2046">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -499,7 +500,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57407e2249"></a><section id="detail_d57407e2249">
+         </section><a class="anchor" id="detail_d57419e2255"></a><section id="detail_d57419e2255">
             <h4>  geldigheidsduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -545,7 +546,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57407e2457"></a><section id="detail_d57407e2457">
+         </section><a class="anchor" id="detail_d57419e2463"></a><section id="detail_d57419e2463">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -811,7 +812,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d57407e3244"></a><section id="detail_d57407e3244">
+            </section><a class="anchor" id="detail_d57419e3253"></a><section id="detail_d57419e3253">
             <h4>  gebruiksdoel systeem</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -848,7 +849,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57407e3411"></a><section id="detail_d57407e3411">
+         </section><a class="anchor" id="detail_d57419e3420"></a><section id="detail_d57419e3420">
             <h4>  maximale waterverplaatsing</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -914,7 +915,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57407e3696"></a><section id="detail_d57407e3696">
+         </section><a class="anchor" id="detail_d57419e3705"></a><section id="detail_d57419e3705">
             <h4>  geldigheidsduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1188,7 +1189,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d57407e4949"></a><section id="detail_d57407e4949">
+            </section><a class="anchor" id="detail_d57419e4967"></a><section id="detail_d57419e4967">
             <h4>  maximale waterverplaatsing</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1252,7 +1253,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57407e5185"></a><section id="detail_d57407e5185">
+         </section><a class="anchor" id="detail_d57419e5203"></a><section id="detail_d57419e5203">
             <h4>  energiekenmerken</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1320,7 +1321,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57407e5513"></a><section id="detail_d57407e5513">
+         </section><a class="anchor" id="detail_d57419e5531"></a><section id="detail_d57419e5531">
             <h4>  geldigheidsduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1357,7 +1358,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57407e5680"></a><section id="detail_d57407e5680">
+         </section><a class="anchor" id="detail_d57419e5698"></a><section id="detail_d57419e5698">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1781,7 +1782,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d57407e6538"></a><section id="detail_d57407e6538">
+            </section><a class="anchor" id="detail_d57419e6556"></a><section id="detail_d57419e6556">
             <h4>  geldigheidsduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1818,7 +1819,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57407e6705"></a><section id="detail_d57407e6705">
+         </section><a class="anchor" id="detail_d57419e6723"></a><section id="detail_d57419e6723">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2047,7 +2048,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d57407e7585"></a><section id="detail_d57407e7585">
+            </section><a class="anchor" id="detail_d57419e7603"></a><section id="detail_d57419e7603">
             <h4>  geldigheidsduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2085,7 +2086,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57407e7752"></a><section id="detail_d57407e7752">
+         </section><a class="anchor" id="detail_d57419e7770"></a><section id="detail_d57419e7770">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2648,7 +2649,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d57407e9675"></a><section id="detail_d57407e9675">
+            </section><a class="anchor" id="detail_d57419e9693"></a><section id="detail_d57419e9693">
             <h4>  filtertraject</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2707,7 +2708,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57407e9966"></a><section id="detail_d57407e9966">
+         </section><a class="anchor" id="detail_d57419e9984"></a><section id="detail_d57419e9984">
             <h4>  geldigheidsduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2744,7 +2745,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57407e10133"></a><section id="detail_d57407e10133">
+         </section><a class="anchor" id="detail_d57419e10151"></a><section id="detail_d57419e10151">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2959,7 +2960,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d57407e11399"></a><section id="detail_d57407e11399">
+            </section><a class="anchor" id="detail_d57419e11426"></a><section id="detail_d57419e11426">
             <h4>  geldigheidsduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2997,7 +2998,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57407e11566"></a><section id="detail_d57407e11566">
+         </section><a class="anchor" id="detail_d57419e11593"></a><section id="detail_d57419e11593">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -3551,7 +3552,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d57407e12931"></a><section id="detail_d57407e12931">
+            </section><a class="anchor" id="detail_d57419e12960"></a><section id="detail_d57419e12960">
             <h4>  geldigheidsduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -3589,7 +3590,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57407e13098"></a><section id="detail_d57407e13098">
+         </section><a class="anchor" id="detail_d57419e13127"></a><section id="detail_d57419e13127">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -3872,7 +3873,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d57407e13996"></a><section id="detail_d57407e13996">
+            </section><a class="anchor" id="detail_d57419e14025"></a><section id="detail_d57419e14025">
             <h4>  geldigheidsduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -3910,7 +3911,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57407e14163"></a><section id="detail_d57407e14163">
+         </section><a class="anchor" id="detail_d57419e14192"></a><section id="detail_d57419e14192">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4390,7 +4391,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d57407e16105"></a><section id="detail_d57407e16105">
+            </section><a class="anchor" id="detail_d57419e16139"></a><section id="detail_d57419e16139">
             <h4>  geldigheidsduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4427,7 +4428,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57407e16272"></a><section id="detail_d57407e16272">
+         </section><a class="anchor" id="detail_d57419e16306"></a><section id="detail_d57419e16306">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4933,7 +4934,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d57407e17646"></a><section id="detail_d57407e17646">
+            </section><a class="anchor" id="detail_d57419e17680"></a><section id="detail_d57419e17680">
             <h4>  geldigheidsduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4970,7 +4971,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d57407e17813"></a><section id="detail_d57407e17813">
+         </section><a class="anchor" id="detail_d57419e17847"></a><section id="detail_d57419e17847">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
