--- a/data/GUF-cat.respec.html
+++ b/data/GUF-cat.respec.html
@@ -955,9 +955,9 @@
                      <th>Toelichting</th>
                      <td>
                         
-                        <p>Het Recht grondwater gebruik ontstaat bij het verlenen van de vergunning. Bij meldingen
+                        <p>Het Recht grondwatergebruik ontstaat bij de ingangsdatum van de vergunning. Bij meldingen
                            ontstaat het Recht grondwatergebruik bij het bevestigen van de melding. Het intrekken
-                           van de vergunning of wanneer de einddatum is bereikt betekent het einde van het Recht
+                           van de vergunning of wanneer de einddatum is bereikt, betekent het einde van het Recht
                            grondwatergebruik.</p>
                         </td>
                   </tr>
@@ -2332,8 +2332,8 @@
                      <th>Toelichting</th>
                      <td>
                         
-                        <p>Indien dit nee is, is de geometrie van de ontwerpput niet voor alle gebruikers te
-                           raadplegen in het kader van de Wet beveiliging netwerk- en informatiesystemen.</p>
+                        <p>Indien dit <em>nee</em> is, is de geometrie van de ontwerpput niet voor alle gebruikers te raadplegen in
+                           het kader van de Wet beveiliging netwerk- en informatiesystemen.</p>
                         </td>
                   </tr>
                </tbody>
@@ -2548,7 +2548,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d56202e9239"></a><section id="detail_d56202e9239">
+            </section><a class="anchor" id="detail_d56202e9242"></a><section id="detail_d56202e9242">
             <h4>  filtertraject</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2607,7 +2607,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d56202e9530"></a><section id="detail_d56202e9530">
+         </section><a class="anchor" id="detail_d56202e9533"></a><section id="detail_d56202e9533">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2822,7 +2822,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d56202e10805"></a><section id="detail_d56202e10805">
+            </section><a class="anchor" id="detail_d56202e10808"></a><section id="detail_d56202e10808">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -3295,7 +3295,7 @@
                   </tr>
                   <tr>
                      <th>Materiële geschiedenis</th>
-                     <td>Ja</td>
+                     <td>Nee</td>
                   </tr>
                   <tr>
                      <th>Mogelijk geen waarde</th>
@@ -3376,7 +3376,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d56202e12172"></a><section id="detail_d56202e12172">
+            </section><a class="anchor" id="detail_d56202e12175"></a><section id="detail_d56202e12175">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -3659,7 +3659,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d56202e13070"></a><section id="detail_d56202e13070">
+            </section><a class="anchor" id="detail_d56202e13073"></a><section id="detail_d56202e13073">
             <h4>  geldigheidsduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -3697,7 +3697,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d56202e13237"></a><section id="detail_d56202e13237">
+         </section><a class="anchor" id="detail_d56202e13240"></a><section id="detail_d56202e13240">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4177,7 +4177,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d56202e15184"></a><section id="detail_d56202e15184">
+            </section><a class="anchor" id="detail_d56202e15187"></a><section id="detail_d56202e15187">
             <h4>  geldigheidsduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4214,7 +4214,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d56202e15351"></a><section id="detail_d56202e15351">
+         </section><a class="anchor" id="detail_d56202e15354"></a><section id="detail_d56202e15354">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4720,7 +4720,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d56202e16725"></a><section id="detail_d56202e16725">
+            </section><a class="anchor" id="detail_d56202e16728"></a><section id="detail_d56202e16728">
             <h4>  geldigheidsduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4757,7 +4757,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d56202e16892"></a><section id="detail_d56202e16892">
+         </section><a class="anchor" id="detail_d56202e16895"></a><section id="detail_d56202e16895">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
