--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<p><a href ="#grondwatergebruiksysteem">Hoofdstuk 3</a> plaatst het object in de gegevenssystematiek van de basisregistratie ondergrond en vertelt wat de benadering is geweest bij het opstellen van de <a href="#cat">gegevensdefinitie</a>.</p>
 	<p><a href ="#intro-gegevensdefinitie">Hoofdstuk 4</a> vertelt hoe de catalogus is opgebouwd en welke aspecten van de gegevens daarin worden beschreven.</p>
 	<p><a href ="#gegevensdefinitie">Hoofdstuk 5</a> geeft de inhoud weer van het eerste artikel van de ministeriële regeling en dat is het deel waarin de definitie is opgenomen van het registratieobject, van de delen waaruit het is opgebouwd, de entiteiten, en van de eigenschappen van die delen, de attributen.</p>
-	<p><a href ="#uitbreidbare-waardelijsten>Hoofdstuk 6</a> geeft de inhoud weer van het tweede artikel van de ministeriële regeling en dat is het deel waarin de uitbreidbare waardelijsten staan waarnaar in hoofdstuk 5 verwezen wordt.</p>
+	<p><a href ="#uitbreidbare-waardelijsten">Hoofdstuk 6</a> geeft de inhoud weer van het tweede artikel van de ministeriële regeling en dat is het deel waarin de uitbreidbare waardelijsten staan waarnaar in hoofdstuk 5 verwezen wordt.</p>
     </section>
   </section>
  
