--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
   <section id="intro-gegevensdefinitie">
     <h2>Opbouw van de gegevensdefinitie</h2>
      <div id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html" class="generic"></div>
-    <section data-include="https://docs.geostandaarden.nl/bro/gen/domeinmodel-gen.html" class="generic"></section>
     <section id="type-formaten">
-      <h3>Formaten in de gegevensdefinitie</h3>
+      <h3>Domeinen</h3>
       <!-- hier alleen de domeinuitleg includeren voor domeinen die in het registratieobject gebruikt worden -->
       <p>Een formaat beschrijft welke waarden een attribuut mag hebben. Formaten zijn van een bepaald type. De typen die in de gegevensdefinitie gebruikt zijn, worden hieronder toegelicht.</p>
       <section id="enumeratie" data-include="https://docs.geostandaarden.nl/bro/gen/enumeratie.html" class="generic"></section>
@@ -63,6 +62,7 @@
       <section id="datumtijd" data-include="https://docs.geostandaarden.nl/bro/gen/datumtijd.html" class="generic"></section>
       <section id="organisatie" data-include="https://docs.geostandaarden.nl/bro/gen/organisatie.html" class="generic"></section>    
     </section>
+    <section data-include="https://docs.geostandaarden.nl/bro/gen/domeinmodel-gen.html" class="generic"></section>  
     <section id="verplichte-gegevens-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/verplichte-gegevens-waarden.html" class="generic"></section>
   </section>
   
