--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <section id='sotd'></section>
 
   <!-- INLEIDING -->
-  <section id='inleiding'>
+  <section id='inleiding' class='generic informative'>
     <h2>Inleiding</h2>
     <section id='doel-en-doelgroep' class='generic' data-include='https://docs.geostandaarden.nl/bro/gen/doel-en-doelgroep.html'>
     </section>
@@ -47,24 +47,35 @@
     class='generic'></section>
 
   <!-- INTRODUCTIE GEGEVENSDEFINITIE GENERIEK-->
-  <section id="intro-gegevensdefinitie">
-    <h2>Opbouw van de gegevensdefinitie</h2>
-     <div id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html" class="generic"></div>
-    <section id="type-formaten">
-      <h3>Domeinen</h3>
-      <!-- hier alleen de domeinuitleg includeren voor domeinen die in het registratieobject gebruikt worden -->
-      <p>Een formaat beschrijft welke waarden een attribuut mag hebben. Formaten zijn van een bepaald type. De typen die in de gegevensdefinitie gebruikt zijn, worden hieronder toegelicht.</p>
-      <section id="enumeratie" data-include="https://docs.geostandaarden.nl/bro/gen/enumeratie.html" class="generic"></section>
-      <section id="codelijst" data-include="https://docs.geostandaarden.nl/bro/gen/codelijst.html" class="generic"></section>
-      <section id="tekst" data-include="https://docs.geostandaarden.nl/bro/gen/tekst.html" class="generic"></section>
-      <section id="code" data-include="https://docs.geostandaarden.nl/bro/gen/code.html" class="generic"></section>
-      <section id="meetwaarde" data-include="https://docs.geostandaarden.nl/bro/gen/meetwaarde.html" class="generic"></section>
-      <section id="datumtijd" data-include="https://docs.geostandaarden.nl/bro/gen/datumtijd.html" class="generic"></section>
-      <section id="organisatie" data-include="https://docs.geostandaarden.nl/bro/gen/organisatie.html" class="generic"></section>    
-    </section>
-    <section data-include="https://docs.geostandaarden.nl/bro/gen/domeinmodel-gen.html" class="generic"></section>  
-    <section id="verplichte-gegevens-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/verplichte-gegevens-waarden.html" class="generic"></section>
-  </section>
+  <section id="opbouw-gegevensdefinitie" class='generic informative'>
+    	<h2>Opbouw van de gegevensdefinitie</h2>
+	<section id="gegevensdefinitie" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html"></section>
+		<section id="domeinen">
+			<h3>Domeinen</h3>
+			<div id="domeinen-intro" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html"></div>
+			<section id="aantal" data-include="https://docs.geostandaarden.nl/bro/gen/aantal.html"></section>
+			<section id="code" data-include="https://docs.geostandaarden.nl/bro/gen/code.html"></section>
+			<section id="gemeten-waarden">
+				<h4>Gemeten waarden</h4>
+				<div id="gemeten-waarden-intro" data-include="https://docs.geostandaarden.nl/bro/gen/gemeten-waarden-intro.html"></div>
+				<section id="meetwaarde" data-include="https://docs.geostandaarden.nl/bro/gen/meetwaarde.html"></section>
+				<div id="inname-gemeten-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/inname-gemeten-waarden.html"></div>
+			</section>
+			<section id="nummer" data-include="https://docs.geostandaarden.nl/bro/gen/nummer.html"></section>
+			<section id="tekst" data-include="https://docs.geostandaarden.nl/bro/gen/tekst.html"></section>		
+			<section id="tijdstip" data-include="https://docs.geostandaarden.nl/bro/gen/datumtijd.html"></section>
+			<section id="waardelijsten">
+				<h4>Waardelijsten</h4>
+				<div id="waardelijst-intro" data-include="https://docs.geostandaarden.nl/bro/gen/waardelijst.html"></div>
+				<section id="waardelijst-niet-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/enumeratie.html"></section>
+				<section id="waardelijst-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/codelijst.html"></section>
+			</section>
+			<section id="organisatie" data-include="https://docs.geostandaarden.nl/bro/gen/organisatie.html"></section>
+		</section>
+		<section id="meetreeks" data-include="https://docs.geostandaarden.nl/bro/gen/meetreeks.html"></section>
+		<section id="domeinmodel" data-include="https://docs.geostandaarden.nl/bro/gen/domeinmodel-gen.html"></section>
+		<section id="verplichte-gegevens-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/verplichte-gegevens-waarden.html"></section>
+	</section>
   
   <!-- MODEL -->
   <div data-include="data/GUF-cat.respec.html" data-include-replace=true></div>
