--- a/index.html
+++ b/index.html
@@ -35,16 +35,15 @@
     <h3>Leeswijzer</h3>
       	<p><a href ="#inleiding">Hoofdstuk 1</a> geeft het doel en de doelgroep van een catalogus.</p>
 	<p><a href ="#algemene-kenmerken-en-begrippen">Hoofdstuk 2</a> behandelt enkele algemene aspecten van het BRO-systeem en begrippen van algemene aard.</p>
-	<p><a href ="#grondwatergebruiksysteem">Hoofdstuk 3</a> plaatst het object in de gegevenssystematiek van de basisregistratie ondergrond en vertelt wat de benadering is geweest bij het opstellen van de <a href="#cat">gegevensdefinitie</a>.</p>
-	<p><a href ="#intro-gegevensdefinitie">Hoofdstuk 4</a> vertelt hoe de catalogus is opgebouwd en welke aspecten van de gegevens daarin worden beschreven.</p>
-	<p><a href ="#gegevensdefinitie">Hoofdstuk 5</a> geeft de inhoud weer van het eerste artikel van de ministeriële regeling en dat is het deel waarin de definitie is opgenomen van het registratieobject, van de delen waaruit het is opgebouwd, de entiteiten, en van de eigenschappen van die delen, de attributen.</p>
+	<p><a href ="#GUF_beschrijving">Hoofdstuk 3</a> plaatst het object in de gegevenssystematiek van de basisregistratie ondergrond en vertelt wat de benadering is geweest bij het opstellen van de <a href="#cat">gegevensdefinitie</a>.</p>
+	<p><a href ="#opbouw-gegevensdefinitie">Hoofdstuk 4</a> vertelt hoe de catalogus is opgebouwd en welke aspecten van de gegevens daarin worden beschreven.</p>
+	<p><a href ="#gegevensdefinitie-0">Hoofdstuk 5</a> geeft de inhoud weer van het eerste artikel van de ministeriële regeling en dat is het deel waarin de definitie is opgenomen van het registratieobject, van de delen waaruit het is opgebouwd, de entiteiten, en van de eigenschappen van die delen, de attributen.</p>
 	<p><a href ="#uitbreidbare-waardelijsten">Hoofdstuk 6</a> geeft de inhoud weer van het tweede artikel van de ministeriële regeling en dat is het deel waarin de uitbreidbare waardelijsten staan waarnaar in hoofdstuk 5 verwezen wordt.</p>
     </section>
   </section>
  
   <!-- ALGEMENE KENMERKEN EN BEGRIPPEN-->
-  <section id='algemene-kenmerken-en-begrippen' data-include='https://docs.geostandaarden.nl/bro/gen/algemene-kenmerken-en-begrippen.html'
-    class='generic'></section>
+  <section id='algemene-kenmerken-en-begrippen' data-include='https://docs.geostandaarden.nl/bro/gen/algemene-kenmerken-en-begrippen.html' class='generic informative'></section>
 
   <!-- INTRODUCTIE GEGEVENSDEFINITIE GENERIEK-->
   <section id="opbouw-gegevensdefinitie" class='generic informative'>
@@ -53,7 +52,6 @@
 		<section id="domeinen">
 			<h3>Domeinen</h3>
 			<div id="domeinen-intro" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html"></div>
-			<section id="aantal" data-include="https://docs.geostandaarden.nl/bro/gen/aantal.html"></section>
 			<section id="code" data-include="https://docs.geostandaarden.nl/bro/gen/code.html"></section>
 			<section id="gemeten-waarden">
 				<h4>Gemeten waarden</h4>
@@ -61,7 +59,6 @@
 				<section id="meetwaarde" data-include="https://docs.geostandaarden.nl/bro/gen/meetwaarde.html"></section>
 				<div id="inname-gemeten-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/inname-gemeten-waarden.html"></div>
 			</section>
-			<section id="nummer" data-include="https://docs.geostandaarden.nl/bro/gen/nummer.html"></section>
 			<section id="tekst" data-include="https://docs.geostandaarden.nl/bro/gen/tekst.html"></section>		
 			<section id="tijdstip" data-include="https://docs.geostandaarden.nl/bro/gen/datumtijd.html"></section>
 			<section id="waardelijsten">
@@ -81,7 +78,7 @@
   <div data-include="data/GUF-cat.respec.html" data-include-replace=true></div>
   
   <!-- BESCHRIJVING -->
-  <section id="toegepast-booronderzoek-model" data-format="markdown" data-include='guf-beschrijving.md'></section>
+  <section id="GUF_beschrijving" data-format="markdown" data-include='guf-beschrijving.md'></section>
 </body>
 
 </html>
